--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -183,7 +183,7 @@ a {
 }
 
 a:hover {
-  color: #5e50ee;
+  color: #3e9c64;
   text-decoration: none;
 }
 
@@ -3338,7 +3338,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-link:hover {
-  color: #5e50ee;
+  color: #3e9c64;
   text-decoration: none;
 }
 
@@ -5316,7 +5316,7 @@ input[type=button].btn-block {
 
 .page-link:hover {
   z-index: 2;
-  color: #5e50ee;
+  color: #3e9c64;
   text-decoration: none;
   background-color: #ededed;
   border-color: #dae1e7;
@@ -6752,7 +6752,7 @@ a.close.disabled {
   font-size: 1rem;
   color: #2c2c2c;
   background-color: #47b272;
-  border-bottom: 1px solid #5e50ee;
+  border-bottom: 1px solid #3e9c64;
   border-top-left-radius: calc(0.6rem - 1px);
   border-top-right-radius: calc(0.6rem - 1px);
 }
