--- a/public/css/custom-laravel.css
+++ b/public/css/custom-laravel.css
@@ -56,7 +56,7 @@ html body.navbar-static .app-content .header-navbar {
   font-family: 'BarlowCondensed', sans-serif;
   letter-spacing: 0em;
   font-size: 1.2em;
-  color: #bdbdbd;
+  color: #b4b4b4;
 }
 
 @media (max-width: 575.98px) {
