--- a/public/css/custom-laravel.css
+++ b/public/css/custom-laravel.css
@@ -49,13 +49,17 @@ html body.navbar-static .app-content .header-navbar {
 }
 
 .with-logo {
+  margin-top: -7px;
   font-family: 'Youthome', Fallback, sans-serif !important;
+  font-size: 1em;
+  line-height: 1em;
 }
 
 .with-logo span {
   font-family: 'BarlowCondensed', sans-serif;
   letter-spacing: 0em;
-  font-size: 1.2em;
+  font-size: 1.1em;
+  line-height: 1.1em;
   color: #c7c7c7;
 }
 
